yamls/nginx-test/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
  namespace: nginx-test
spec:
  rules:
    - host: nginxtest.systemtest.local
      http:
        paths:
          - backend:
              service:
                name: nginx-test-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
